@@ -9,57 +9,56 @@ import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
 @Transactional
 public class TaskService {
-    
+
     private final TaskRepository taskRepository;
-    
+
     public List<TaskDTO> getAllTasks() {
         return taskRepository.findAllByOrderByStatusAscPositionAsc()
                 .stream()
                 .map(TaskDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     public List<TaskDTO> getTasksByStatus(TaskStatus status) {
         return taskRepository.findByStatusOrderByPositionAsc(status)
                 .stream()
                 .map(TaskDTO::fromEntity)
-                .collect(Collectors.toList());
+                .toList();
     }
-    
+
     public TaskDTO createTask(TaskDTO taskDTO) {
         List<Task> tasksInSameStatus = taskRepository.findByStatusOrderByPositionAsc(taskDTO.getStatus());
         int newPosition = tasksInSameStatus.isEmpty() ? 0 : tasksInSameStatus.size();
-        
+
         taskDTO.setPosition(newPosition);
         Task task = taskRepository.save(taskDTO.toEntity());
         return TaskDTO.fromEntity(task);
     }
-    
+
     public TaskDTO updateTask(Long id, TaskDTO taskDTO) {
         Task task = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + id));
-        
+                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + id)); // 예외처리
+
         task.setTitle(taskDTO.getTitle());
         task.setDescription(taskDTO.getDescription());
         task.setAssignee(taskDTO.getAssignee());
         task.setPriority(taskDTO.getPriority());
-        
+
         return TaskDTO.fromEntity(taskRepository.save(task));
     }
-    
+
     public void moveTask(Long taskId, TaskStatus newStatus, Integer newPosition) {
         Task task = taskRepository.findById(taskId)
-                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + taskId));
-        
+                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + taskId)); // 예외처리
+
         TaskStatus oldStatus = task.getStatus();
         Integer oldPosition = task.getPosition();
-        
+
         if (!oldStatus.equals(newStatus)) {
             List<Task> oldStatusTasks = taskRepository.findByStatusOrderByPositionAsc(oldStatus);
             for (Task t : oldStatusTasks) {
@@ -69,7 +68,7 @@ public class TaskService {
                 }
             }
         }
-        
+
         List<Task> newStatusTasks = taskRepository.findByStatusOrderByPositionAsc(newStatus);
         for (Task t : newStatusTasks) {
             if (!t.getId().equals(taskId) && t.getPosition() >= newPosition) {
@@ -77,16 +76,16 @@ public class TaskService {
                 taskRepository.save(t);
             }
         }
-        
+
         task.setStatus(newStatus);
         task.setPosition(newPosition);
         taskRepository.save(task);
     }
-    
+
     public void deleteTask(Long id) {
         Task task = taskRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + id));
-        
+                .orElseThrow(() -> new RuntimeException("업무를 찾을 수 없습니다: " + id)); // 예외처리
+
         List<Task> tasksInSameStatus = taskRepository.findByStatusOrderByPositionAsc(task.getStatus());
         for (Task t : tasksInSameStatus) {
             if (t.getPosition() > task.getPosition()) {
@@ -94,7 +93,7 @@ public class TaskService {
                 taskRepository.save(t);
             }
         }
-        
+
         taskRepository.deleteById(id);
     }
 }
